# SDV_subscription_app

./: .gitignore  .gitmodules  README.md  test.sh
src/eevp_main_machine/: build.sh  hd_update.sh  sub_symbollink.sh  symbol_link.sh  update.sh
src/eevp_main_machine/adaptive_autosar/: README  adaptive_autosar
src/eevp_main_machine/ap_app/ap_ipchandler/: docker_build.sh  ipchandler.puml
src/eevp_main_machine/ap_app/ap_soa/: CMakeLists.txt
src/eevp_main_machine/ap_app/ap_soa_debugger/: CMakeLists.txt
src/eevp_main_machine/ap_intelligent_wiper/: CMakeLists.txt  adaptive_autosar  docker_build.sh
src/eevp_main_machine/ap_ipchandler/: README  docker_build.sh
src/eevp_main_machine/ap_katech/: CMakeLists.txt
src/eevp_main_machine/ap_katech_new/: adaptive_autosar
src/eevp_main_machine/ap_lotte_service/: CMakeLists.txt
src/eevp_main_machine/ap_monitoringmanager/: CMakeLists.txt
src/eevp_main_machine/ap_otaclient/: CMakeLists.txt  README  adaptive_autosar
src/eevp_main_machine/ap_service_creator/: CMakeLists.txt
src/eevp_main_machine/ap_sm/: README  docker_build.sh
src/eevp_main_machine/ap_soa_rearcurtain/: CMakeLists.txt
src/eevp_main_machine/ap_soa_roa/: .gitignore  CMakeLists.txt  docker_build.sh
src_new/eevp_main_machine/ap_ipchandler/: CMakeLists.txt  ipchandler.puml
src_new/eevp_main_machine/ap_ipchandler/include/event/: EventHandler.hpp  Notifier.hpp
src_new/eevp_main_machine/ap_ipchandler/include/ipc/: ipc.hpp
src_new/eevp_main_machine/ap_ipchandler/include/services/: RoutingIPCSkeleton.hpp
src_new/eevp_main_machine/ap_ipchandler/src/event/: EventHandler.cpp
src_new/eevp_main_machine/ap_ipchandler/src/ipc/: IPCIntf.cpp
src_new/eevp_main_machine/ap_ipchandler/src/test/: test_ipc.cpp  test_main.cpp
src_new/eevp_main_machine/ap_katech/: CMakeLists.txt  README
src_new/eevp_main_machine/ap_monitoringmanager/: CMakeLists.txt
src_new/eevp_main_machine/ap_sm/: CMakeLists.txt  ap_sm.puml
src_new/eevp_main_machine/ap_soa_rearcurtain/: .gitignore  CMakeLists.txt
src_new/eevp_main_machine/ap_soa_roa/: CMakeLists.txt
(+778 files in other folders)
