# Copyright 2024 Hyundai Mobis Co., Ltd. All rights reserved.

CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

OPTION(BUILD_IN_DOCKER "Build in docker environment" OFF)
IF(BUILD_IN_DOCKER)
    ADD_DEFINITIONS(-DBUILD_IN_DOCKER)
ENDIF()

OPTION(ENABLE_TEST "Run Test" OFF)
IF(ENABLE_TEST)
    ADD_DEFINITIONS(-DENABLE_TEST)
ENDIF()

OPTION(ENABLE_IPC_SHM "Build with IPC-SHM Library" OFF)
IF(ENABLE_IPC_SHM)
    ADD_DEFINITIONS(-DENABLE_IPC_SHM)
ENDIF()

MESSAGE(STATUS "BUILD_IN_DOCKER : ${BUILD_IN_DOCKER}")
MESSAGE(STATUS "ENABLE_TEST : ${ENABLE_TEST}")
MESSAGE(STATUS "ENABLE_IPC_SHM : ${ENABLE_IPC_SHM}")
MESSAGE(STATUS "PARA_SDK : ${PARA_SDK}")

SET(INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
SET(GEN_MACHINE_DIR "${GEN_DIR}/gen/gen_ara/implementation/EEVP_Main_Machine")
SET(PARA_INC_DIR "${PARA_SDK}/include")

MESSAGE(STATUS "INSTALL_DIR : ${INSTALL_DIR}")
MESSAGE(STATUS "PARA_INC_DIR : ${PARA_INC_DIR}")

INCLUDE(${GEN_MACHINE_DIR}/cmake/ParaSdk.cmake)

SET(PARA_APP_NAME IPCHandler)
SET(PARA_APP_VERSION 1.0.0)
SET(PARA_APP_GEN_DIR "${GEN_MACHINE_DIR}/${PARA_APP_NAME}")
SET(PARA_PLATFORM TRUE)
Para_App()

PROJECT(${PARA_APP_NAME}
        VERSION ${PARA_APP_VERSION}
        LANGUAGES CXX)

INCLUDE_DIRECTORIES("./include")
INCLUDE_DIRECTORIES(${PARA_APP_GEN_DIR}/include)
INCLUDE_DIRECTORIES(${PARA_INC_DIR})

SET(SRC
    src/ipc/ipc.cpp
    src/log/Log.cpp
    src/ipc/IPCIntf.cpp
    src/services/RoutingIPCSkeleton.cpp
    src/event/EventHandler.cpp
    src/main.cpp)

IF (ENABLE_TEST)
SET(SRC ${SRC}
    src/test/test_main.cpp
    src/test/test_ipc.cpp)
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})

IF (ENABLE_TEST)
SET(LIBS ${LIBS} gtest)
ENDIF()

IF (ENABLE_IPC_SHM)
    SET(LIBS ${LIBS} ipc-shm)
ENDIF()

Para_Target(${PARA_APP_NAME}
    PARA_LIBS_PRIVATE core log exec com
    PARA_GEN_DIR ${PARA_APP_GEN_DIR}
    OUTPUT_NAME ${PARA_APP_NAME}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    PRIVATE event ${LIBS}
)